--- a/templates/index.html
+++ b/templates/index.html
@@ -3,31 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>AES System</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style3.css') }}">
 </head>
 <body>
     <div class="main-page">
         <div id="main-div" class="main-content">
             <div class="top-half">
-                <h1>Michael's Feldman Bachelor's Project</h1>
-                <p><i>It's an Automated Essay Scoring System. You can paste your essay here and we will try and predict your score</i></p>
+                <p class="header">Michael's Feldman Bachelor's Project<p>
+                <input type="radio" id="radio" checked>
+                <label class="type" for="male">Persuasive essay (max 12 point)</label><br>
             </div>
-            <div class="bottom-half">
+            <div class="bottom_half">
                 <div class="bottom-input">
                     <div class="input-div">
                         <form id="input-form" class="input-form" action="{{ url_for('predict')}}" method="post">
-                            <textarea id="input_text" name="input_text" placeholder="Type something!"></textarea>
-                            <button type="submit" class="pred-btn btn btn-primary btn-block btn-large">Get a score!</button>
+                            <div class="textarea_container"><textarea id="input_text" name="input_text" placeholder="Type something!"></textarea></div>
+                            <div class="bottom">
+                                <div>
+                                    <p class="result">Your score:</p>
+                                    <p class="result">{{ prediction_text }}</p>
+                                </div>
+                                <button type="submit" class="submit_button">Get a score</button>
+                            </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-   <br>
-   <br>
-   {{ prediction_text }}
+
     </div>
 </body>
 </html>
