--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>AES System</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style3.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/new_style.css') }}">
+    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+
 </head>
 <body>
     <div class="main-page">
@@ -29,8 +31,19 @@
                     </div>
                 </div>
             </div>
+            <ul class="list">
+                <li class="details">
+                  <input type="checkbox" id="other">
+                  <label for="other" class="summary">Click where to read the description</label>
+                  <div class="description_text"> 
+                    <ul>
+                      <li>Automated essay scoring (AES) is the use of specialized computer programs to assign grades to essays written in an educational setting. It is a of educational assessment and an application of natural language processing. Its objective is to classify a large set of textual entities into a small number of discrete categories, corresponding to the possible grades—for example, the numbers 1 to 6. Therefore, it can be considered a problem of statistical classification.
+                      <br><br>Several factors have contributed to a growing interest in AES. Among them are cost, accountability, standards, and technology. Rising education costs have led to pressure to hold the educational system accountable for results by imposing standards. The advance of information technology promises to measure educational achievement at reduced cost.</li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
         </div>
-
     </div>
 </body>
 </html>
