--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
             <ul class="list">
                 <li class="details">
                   <input type="checkbox" id="other">
-                  <label for="other" class="summary">Click where to read the description</label>
+                  <label for="other" class="summary">Click here to read the description</label>
                   <div class="description_text"> 
                     <ul>
                       <li>Automated essay scoring (AES) is the use of specialized computer programs to assign grades to essays written in an educational setting. It is a of educational assessment and an application of natural language processing. Its objective is to classify a large set of textual entities into a small number of discrete categories, corresponding to the possible grades—for example, the numbers 1 to 6. Therefore, it can be considered a problem of statistical classification.
